[gd_scene load_steps=2 format=3 uid="uid://g1x2y3z4a5b6"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_script"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="EnergyBar" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 208.0
offset_bottom = 32.0
min_value = 0.0
max_value = 100.0
value = 100.0

[node name="InventoryWindow" type="PanelContainer" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Control/InventoryWindow"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/InventoryWindow/VBox"]
layout_mode = 2
text = "INVENTARIO"
horizontal_alignment = 1

[node name="InventoryGrid" type="GridContainer" parent="Control/InventoryWindow/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 4

[node name="ItemSlotTemplate" type="TextureRect" parent="Control"]
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 56.0
offset_bottom = 88.0
stretch_mode = 2

[node name="Notifications" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 220.0
offset_top = 8.0
offset_right = 420.0
offset_bottom = 208.0

[node name="TimeLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.0
offset_top = 8.0
offset_right = 30.0
offset_bottom = 31.0
grow_horizontal = 2
text = "12:00"
horizontal_alignment = 1

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
